<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentCarInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.likchachevskiy.android.mysto.ui.screens.addcar.AddCarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#4E4D4D"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:weightSum="4">

        <ImageButton
            android:id="@+id/imBtnCarDetailBackStart"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="#4E4D4D"
            android:importantForAccessibility="no"
            android:src="@drawable/arrow_backstart"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tvCarInfo"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/tv_car_detail"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="InefficientWeight" />

        <ImageButton
            android:id="@+id/imBtnUpdate"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="#4E4D4D"
            android:importantForAccessibility="no"
            android:src="@android:drawable/ic_menu_edit"
            tools:ignore="SpeakableTextPresentCheck" />


        <ImageButton
            android:id="@+id/imBtnDelete"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#4E4D4D"
            android:importantForAccessibility="no"
            android:src="@android:drawable/ic_menu_delete"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:background="#9F9D9D"
        android:gravity="center">

        <ImageView
            android:id="@+id/ivUpdateCarPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#9F9D9D"
            android:importantForAccessibility="no"
            android:src="@drawable/camera"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCarInfoOwnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_owner_name"
            android:textColor="@color/purple_700" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCarInfoOwnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="18"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            tools:text="ownerName"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCarInfoProducerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producer"
                android:textColor="@color/purple_700" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCarInfoProducer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="18"
            android:gravity="center_vertical"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:text="@string/tv_producer" />


            <TextView
                android:id="@+id/tv_сarInfo_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_model"
                android:textColor="@color/purple_700" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCarInfoModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="18"
            android:gravity="center_vertical"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck"
            tools:text="@string/tv_model" />

        <TextView
            android:id="@+id/tvCarInfoPlateNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_plate_number"
            android:textColor="@color/purple_700" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCarInfoPlateNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="18"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:text="@string/tv_plate_number" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCarUpdatePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/purple_700"
        android:src="@drawable/camera"
        app:tint="@color/white"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

</FrameLayout>